--- a/index.html
+++ b/index.html
@@ -1,10 +1,21 @@
 <!--
-
-PAPER THEME
-PAPER theme created by Thomas Kimura
+  _ __   __ _ _ __   ___ _ __ 
+ | '_ \ / _` | '_ \ / _ \ '__|
+ | |_) | (_| | |_) |  __/ |   
+ | .__/ \__,_| .__/ \___|_|   
+ |_|         |_|    
  
+Paper theme created by Thomas Kimura
 
+View a live demo at http://papertheme.tumblr.com/
+
+view this project at https://github.com/thomaskimura/Paper
+    
+    tweet @thomaskimura_
+    github @thomaskimura
+    
 -->
+
 <html>
     <head>
         <title>{Title}{block:PostTitle} - {PostTitle}{/block:PostTitle}</title>
@@ -240,8 +251,8 @@ ol.notes li.note blockquote{border-color:#ccc;border-left:solid;border-width:5px
 
 /*INSTAGRAM FEED*/
 #instafeed{width: 100%;overflow: scroll;white-space: nowrap;}
-#instafeed img{opacity:0.5;}
-#instafeed img:hover{opacity:0.8;}
+#instafeed img{opacity:0.2;}
+#instafeed img:hover{opacity:0.5;}
 /*For instagram banner*/
 #instafeed::-webkit-scrollbar{width:0px}
 #instafeed::-webkit-scrollbar:horizontal{height:0px;}
