--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@ view this project at https://github.com/thomaskimura/Paper
 <!--Google Fonts-->
 <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,300italic,400italic,700italic' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,300,700' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Cinzel+Decorative:900' rel='stylesheet' type='text/css'>
 
 <style>
 /*----*/
@@ -223,7 +224,7 @@ margin:0px;
 .sb-slidebar ul li{padding-top:20px;padding-left:10px;}
 .sb-slidebar ul li a{ color:{color:Light Color}; font-weight:300;}
 .sb-slidebar ul li a:hover{color:{color:Main Color};}
-#header h1{color:{color:Main Color}; font-family: 'Lato', sans-serif; font-weight:900; text-transform: uppercase;}
+#header h1{color:{color:Main Color}; font-family: 'Lata', sans-serif; font-weight:900;}
 #header h2{font-family: 'Roboto Slab', serif; font-weight: 300; font-size:1rem;}
 #headerImage{border-radius:100px}
 #headerImageContainer{background:transparent;width:100px;margin:0 auto;padding:5px; margin-top:20px;}
@@ -659,6 +660,7 @@ ul{margin-left:0px;}/*remove foundation left margin*/
                 .space{display:none;}
                 .clearOnPermalink{display:none;}
                 .clearOnIndex{display:initial;}
+                #headerBackground{opacity:0.8;}
                 #headerBackground h1{font-size:2rem; margin:0px;}
                 #headerBackground h2{font-size:0.8rem; margin-bottom:50px;}
                 #disqus_thread{margin-top: 130px;}
