--- a/index.html
+++ b/index.html
@@ -132,7 +132,10 @@ li.L1,li.L3,li.L5,li.L7,li.L9 {background-color:#555;}
     .bottom{display:none;}
     .asksubmit{display:none;}
     .space{display:none;}
+    .notes{display:none;}
+    .sb-slidebar{display:none;}
     #disqus_thread{display:none;}
+    #disqus_loader{display:none;}
     /*Print style for code*/
     body{overflow:visible;}
     #disqus_loader{display:none;}
