--- a/theme.html
+++ b/theme.html
@@ -18,7 +18,7 @@ view this project at https://github.com/thomaskimura/Paper
     github @thomaskimura
     
 -->
-<html>
+<html lang="en">
   <head>
     <title>{block:PostSummary}{PostSummary} | {/block:PostSummary}{Title}</title>
 
