--- a/theme.html
+++ b/theme.html
@@ -39,9 +39,14 @@ thanks to:
     <!-- for Facebook -->          
 <meta property="og:title" content="{block:PostSummary}{PostSummary} | {/block:PostSummary}{Title}" />
 <meta property="og:type" content="article" />
-<meta property="og:image" content="" />
 <meta property="og:url" content="{URL}" />
-<meta property="og:description" content="" />
+<meta property="og:description" content="{block:PostSummary}{PostSummary}{/block:PostSummary}" />
+    
+    <!-- for Twitter -->
+<meta name="twitter:card" content="summary">
+<meta name="twitter:site" content="@{text:Username on Twitter}">
+<meta name="twitter:creator" content="@{text:Username on Twitter}">
+<meta name="twitter:title" content="{block:PostSummary}{PostSummary} | {/block:PostSummary}{Title}">
     
     <!--TUMBLR CUSTOMIZATION-->
     <!--Colours-->
