Added theme garden link

--- a/theme.html
+++ b/theme.html
@@ -1562,7 +1562,7 @@ a:hover{color:{color:Main Color};}
   <!--Blurb-->
   <div id="bottomBlurb">
     <p class="powered">
-      <a href="http://papertheme.tumblr.com/">Paper</a> theme powered by <a href="http://www.tumblr.com/">Tumblr</a>
+      <a href="https://www.tumblr.com/theme/38875">Paper</a> theme powered by <a href="http://www.tumblr.com/">Tumblr</a>
     </p>
   </div>
 
