--- a/theme.html
+++ b/theme.html
@@ -1587,7 +1587,7 @@ a:hover{color:{color:Main Color};}
   <!--Blurb-->
   <div id="bottomBlurb">
     <p class="powered">
-      <a href="https://www.tumblr.com/theme/38875">Paper</a> theme powered by <a href="http://www.tumblr.com/">Tumblr</a>
+      <a href="https://www.tumblr.com/theme/38875">Paper</a> theme built by <a href="https://twitter.com/thomaskimura_">Thomas</a>
     </p>
   </div>
 
