--- a/theme.html
+++ b/theme.html
@@ -6,7 +6,7 @@
  |_| /_/   \_\_|   |_____|_| \_\
 
 
-Version 1.12
+Version 1.0
 
 Paper theme created by Thomas Kimura
 
@@ -97,8 +97,7 @@ thanks to:
     <meta name="if:Instagram Feed" content="0"/>      <!--Enable instagram feeds-->
     <meta name="if:Tweet Button" content="0"/>        <!--Turn on keyboard controls-->
     <meta name="if:Description" content="1"/>
-    <meta name="if:Full Height" content="0"/>
-    <meta name="if:Full Images" content="0"/>
+    <meta name="if:Full Height" content="1"/>
 
     <!--Stylesheets-->
     <link href="http://static.tumblr.com/9hupah0/5ptn5xh2l/style.min.css" rel="stylesheet">
@@ -191,22 +190,16 @@ a:hover{color:{color:Main Color};}
 {block:IfFullHeight}
 {/block:IndexPage}
 
-{block:IfFullImages}
-<style>
-    img{width:100%;}
-</style>
-{/block:IfFullImages}
-
-{block:IfGoogleAnalyticsID}
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-      ga('create', '{text:Google Analytics ID}', 'tumblr.com');
-      ga('send', 'pageview');
-    </script>
-{/block:IfGoogleAnalyticsID}
+        {block:IfGoogleAnalyticsID}
+            <script>
+              (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+              (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+              m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+              })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+              ga('create', '{text:Google Analytics ID}', 'tumblr.com');
+              ga('send', 'pageview');
+            </script>
+        {/block:IfGoogleAnalyticsID}
         
 </head>
 <body onload="prettyPrint()" tabindex="0" onkeydown="keyPress(event)"> <!--load syntax highlighter-->
@@ -1594,7 +1587,7 @@ a:hover{color:{color:Main Color};}
   <!--Blurb-->
   <div id="bottomBlurb">
     <p class="powered">
-      <a href="https://www.tumblr.com/theme/38875">Paper</a> theme powered by <a href="http://www.tumblr.com/">Tumblr</a>
+      <a href="https://www.tumblr.com/theme/38875">Paper</a> theme built by <a href="https://twitter.com/thomaskimura_">Thomas</a>
     </p>
   </div>
 
