--- a/theme.html
+++ b/theme.html
@@ -207,6 +207,7 @@ a:hover{color:{color:Main Color};}
 <style>
     img{width:100%;}
     .postAuthorImage{width:inherit;}
+    img.avatar {width:inherit;}
 </style>
 {/block:IfFullImages}
 
