--- a/theme.html
+++ b/theme.html
@@ -6,7 +6,7 @@
  |_| /_/   \_\_|   |_____|_| \_\
 
 
-Version 1.22
+Version 1.23
 
 Paper theme created by Thomas Kimura
 
@@ -102,7 +102,7 @@ thanks to:
     <meta name="if:Full Images" content="1"/>
 
     <!--Stylesheets-->
-    <link href="http://static.tumblr.com/smotcsf/U5sn6dfjm/style.min.css" rel="stylesheet">
+    <link href="http://static.tumblr.com/smotcsf/EAmn6lstl/style.min.css" rel="stylesheet">
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 
 <style>
@@ -149,7 +149,6 @@ a:hover{color:{color:Main Color};}
     /*HEADER*/
     .header ul, .header p{display:none;}
     .header h1{display:none;}
-    .header .backButton{border: 3px solid #eee; padding: 10px; border-radius: 5px;}
     .backButtonContainer{margin-top:20px;}
     .backButton{display:initial;}
 
@@ -188,7 +187,8 @@ a:hover{color:{color:Main Color};}
 <style>
 .postNav{
     width:32%;
-    display:inline-table;}
+    display:inline-table;
+    float:inherit;}
 .random{
     float:inherit;}
 </style>
