--- a/theme.html
+++ b/theme.html
@@ -6,7 +6,7 @@
  |_| /_/   \_\_|   |_____|_| \_\
 
 
-Version 1.23
+Version 1.22
 
 Paper theme created by Thomas Kimura
 
@@ -1532,7 +1532,7 @@ a:hover{color:{color:Main Color};}
 
       {block:IfGooglePlusUrl}
         <li>
-          <a target="_blank" href="http://www.google.com/+{text:URL on Google Plus}" id="google"><i class="fa fa-google-plus-square"></i></a>
+          <a target="_blank" href="{text:URL on Google Plus}" id="google"><i class="fa fa-google-plus-square"></i></a>
         </li>
       {/block:IfGooglePlusUrl}
 
