Fix Google+ Link
Fix Google plus link

--- a/theme.html
+++ b/theme.html
@@ -6,7 +6,7 @@
  |_| /_/   \_\_|   |_____|_| \_\
 
 
-Version 2.1
+Version 2.11
 
 Paper theme created by Thomas Kimura
 
@@ -1641,7 +1641,7 @@ background: #3b5998;
 
       {block:IfGooglePlusUrl}
         <li>
-          <a target="_blank" href="http://www.google.com/+{text:URL on Google Plus}" id="google"><i class="fa fa-google-plus-square"></i></a>
+          <a target="_blank" href="{text:URL on Google Plus}" id="google"><i class="fa fa-google-plus-square"></i></a>
         </li>
       {/block:IfGooglePlusUrl}
 
