--- a/theme.html
+++ b/theme.html
@@ -1,26 +1,28 @@
 <!--
-  ____   _    ____  _____ ____
- |  _ \ / \  |  _ \| ____|  _ \
- | |_) / _ \ | |_) |  _| | |_) |
- |  __/ ___ \|  __/| |___|  _ <
- |_| /_/   \_\_|   |_____|_| \_\
-
+_____________________________________________
+_____________________________________________
+        ____   _    ____  _____ ____
+       |  _ \ / \  |  _ \| ____|  _ \
+       | |_) / _ \ | |_) |  _| | |_) |
+       |  __/ ___ \|  __/| |___|  _ <
+       |_| /_/   \_\_|   |_____|_| \_\
+_____________________________________________
+_____________________________________________
 
 Version 2.12
+_____________________________________________
 
-Paper theme created by Thomas Kimura
+Paper theme created by: @thomaskimura_
+_____________________________________________
 
-View a live demo at http://papertheme.tumblr.com/
+Demo: papertheme.tumblr.com/
+Project: github.com/thomaskimura/Paper
 
-view this project at https://github.com/thomaskimura/Paper
-
-    tweet @thomaskimura_
-    github @thomaskimura
-
-thanks to:
-    - github.com/PixelUnion/Extended-Tumblr-Photoset
-    - instafeedjs.com
-    - code.google.com/p/google-code-prettify/
+Thanks to:
+- github.com/PixelUnion/Extended-Tumblr-Photoset
+- instafeedjs.com
+- code.google.com/p/google-code-prettify/
+_____________________________________________
 
 -->
 <html lang="en">
